Set up index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<DOCTYPE! html>
+<head>
+  <title>Biology Guide</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
+
+</head>
+<body>
+	
+	
+
+
+</body>
