added and styled heading

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <DOCTYPE! html>
-<head>
-  <title>Biology Guide</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+	<head>
+		<title>Biology Guide</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 
-</head>
-<body>
-	
-	
+	</head>
+
+	<body>
+		<h1 id="title1">Biology Guide</h1>
 
 
-</body>
+
+	</body>
